@@ -1,9 +1,10 @@
 iconsdir = $(datadir)/icons/hicolor/48x48/apps
 icons_DATA = 								\
+	xfce4-autostart-editor.png					\
 	xfce4-session.png						\
 	xfce4-splash.png						\
-	xfsm-logout.png						\
-	xfsm-reboot.png						\
+	xfsm-logout.png							\
+	xfsm-reboot.png							\
 	xfsm-shutdown.png
 
 EXTRA_DIST = $(icons_DATA)
