@@ -1,3 +1,9 @@
+2007-11-29	Benedikt Meurer <benny@xfce.org>
+
+	* icons/, xfce4-autostart-editor/main.c: Add icon from
+	  Jozsef Mak <jozmak@gmail.com> for the autostart editor.
+	  Bug #3215.
+
 2007-11-28	Benedikt Meurer <benny@xfce.org>
 
 	* engines/simple/simple.c: Fix dialog layout. Bug #3287.
